Modernize scene engine and port Taylors